@@ -12,20 +12,20 @@ namespace Publisher
     public class FilePath
     {
 
-        public static string RootDir = Environment.CurrentDirectory+"\\";
+        public static string RootDir = Environment.CurrentDirectory+"/";
 
         public static string IgnoreFile = RootDir + ".pubignore";
 
-        public static string DotPublishDir = RootDir+ ".publisher\\";
+        public static string DotPublishDir = RootDir+ ".publisher/";
 
         public static string ExeRootDir = AppDomain.CurrentDomain.BaseDirectory;
         public static string SecretJsonFile = ExeRootDir + "client_secret.json";
-        public static string BaseUpdaterDir = ExeRootDir + "updater\\";
-        public static string CredentialsJsonFile = ExeRootDir + "\\.credentials/drive-credentials.json";
+        public static string BaseUpdaterDir = ExeRootDir + "updater/";
+        public static string CredentialsJsonFile = ExeRootDir + "/.credentials/drive-credentials.json";
 
         public static string ConfigJsonFile = DotPublishDir + "config.json";
-        public static string TempDir = DotPublishDir + "temp\\";
+        public static string TempDir = DotPublishDir + "temp/";
         public static string TempZipFile = DotPublishDir + "temp.zip";
-        public static string InstallConfigJsonInTemp = TempDir + ".updater\\install_config.json";
+        public static string InstallConfigJsonInTemp = TempDir + ".updater/install_config.json";
     }
 }
