@@ -2,7 +2,7 @@
   "profiles": {
     "Updater": {
       "commandName": "Project",
-      "commandLineArgs": "checkupdate",
+      "commandLineArgs": "showversions",
       "workingDirectory": "bin\\Debug"
     }
   }
